src/objects/Docusign_Settings_EVNT__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Docusign API authentication information</description>
    <fields>
        <fullName>Account_ID_EVNT_MVN__c</fullName>
        <description>Docusign API account ID</description>
        <inlineHelpText>Docusign API connection account ID</inlineHelpText>
        <label>Account Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrator_Key_EVNT_MVN__c</fullName>
        <description>Docusign API Integrator Key</description>
        <inlineHelpText>Docusign API Integrator Key</inlineHelpText>
        <label>Integrator Key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password_EVNT_MVN__c</fullName>
        <description>Docusign API connection password</description>
        <inlineHelpText>Docusign API connection password</inlineHelpText>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username_EVNT_MVN__c</fullName>
        <description>Docusign API connection username</description>
        <inlineHelpText>Docusign API connection username</inlineHelpText>
        <label>Username</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Docusign Settings</label>
</CustomObject>